--- a/333.html
+++ b/333.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +9,22 @@
 	<script src="http://www.yanhuangxueyuan.com/versions/threejsR92/build/three.js"></script>
 	<script src="./OrbitControls.js"></script>
 </head>
+
 <body>
 	<script>
 		/**
-     * 创建场景对象Scene
-     */
-    var scene = new THREE.Scene();
+		 * 创建场景对象Scene
+		 */
+		var scene = new THREE.Scene();
 
-		var box=new THREE.BoxGeometry(100, 100, 100);//创建一个立方体几何对象
-		var material=new THREE.MeshLambertMaterial({color:0xff00ff});//材质对象
-		var mesh=new THREE.Mesh(box,material);//网格模型对象
+		var box = new THREE.BoxGeometry(100, 100, 100); //创建一个立方体几何对象
+		var material = new THREE.MeshLambertMaterial({
+			color: 0xffffff
+		}); //材质对象
+		var mesh = new THREE.Mesh(box, material); //网格模型对象
 		// mesh.translateX(20);//网格模型mesh平移
 		// box.scale(1.5,1.5,1.5);//几何体缩放
-		scene.add(mesh);//网格模型添加到场景中
+		scene.add(mesh); //网格模型添加到场景中
 		// 设置产生投影的网格模型
 		mesh.castShadow = true;
 
@@ -30,7 +34,7 @@
 
 
 		//创建一个平面几何体作为投影面
-		var planeGeometry = new THREE.PlaneGeometry(300, 200);
+		var planeGeometry = new THREE.PlaneGeometry(800, 800);
 		var planeMaterial = new THREE.MeshLambertMaterial({
 			color: 0x999999,
 		});
@@ -43,25 +47,26 @@
 		scene.add(planeMesh); //网格模型添加到场景中
 
 
-    /**
-     * 光源设置
-     */
-    //点光源
-    // var point = new THREE.PointLight(0xff0000);
-    // point.position.set(-100, 100, -100); //点光源位置
-    // scene.add(point); //点光源添加到场景中
+		/**
+		 * 光源设置
+		 */
+		//点光源
+		// var point = new THREE.PointLight(0xff0000);
+		// point.position.set(-100, 100, -100); //点光源位置
+		// scene.add(point); //点光源添加到场景中
 
 		// var PointLightHelper = new THREE.PointLightHelper(point, 30);
 		// scene.add(PointLightHelper);
 
 		// 平行光
-		var directionalLight = new THREE.DirectionalLight(0x00ff00, 1);
+		var directionalLight = new THREE.DirectionalLight(0xff0000, 1);
 		// 设置光源的方向：通过光源position属性和目标指向对象的position属性计算
-		directionalLight.position.set(0, 100, 100);
+		directionalLight.position.set(50, 100, 100);
 		// 方向光指向对象网格模型mesh2，可以不设置，默认的位置是0,0,0
 		directionalLight.target = mesh;
 		// 设置用于计算阴影的光源对象
 		directionalLight.castShadow = true;
+
 		// 设置计算阴影的区域，最好刚好紧密包围在对象周围
 		// 计算阴影的区域过大：模糊  过小：看不到或显示不完整
 		directionalLight.shadow.camera.near = 0.5;
@@ -73,66 +78,68 @@
 		scene.add(directionalLight);
 
 		// 设置mapSize属性可以使阴影更清晰，不那么模糊
-		// directionalLight.shadow.mapSize.set(1024,1024)
+		directionalLight.shadow.mapSize.set(1024,1024)
 		console.log(directionalLight.shadow.camera);
 
 		var DirectionalLightHelper = new THREE.DirectionalLightHelper(directionalLight);
 		scene.add(DirectionalLightHelper);
 
 		// 聚光光源
-		// var spotLight = new THREE.SpotLight(0x0000ff);
-		// // 设置聚光光源位置
-		// spotLight.position.set(100, 100, -100);
-		// // 聚光灯光源指向网格模型mesh2
-		// spotLight.target = mesh;
-		// // 设置聚光光源发散角度
-		// spotLight.angle = Math.PI / 6
-		// scene.add(spotLight);//光对象添加到scene场景中
-		// // 设置用于计算阴影的光源对象
-		// spotLight.castShadow = true;
-		// // 设置计算阴影的区域，注意包裹对象的周围
-		// spotLight.shadow.camera.near = 1;
-		// spotLight.shadow.camera.far = 300;
-		// spotLight.shadow.camera.fov = 20;
-		// var spotLightHelper = new THREE.SpotLightHelper(spotLight);
-		// scene.add(spotLightHelper);
+		var spotLight = new THREE.SpotLight(0x0000ff);
+		// 设置聚光光源位置
+		spotLight.position.set(100, 100, -100);
+		// 聚光灯光源指向网格模型mesh2
+		spotLight.target = mesh;
+		// 设置聚光光源发散角度
+		spotLight.angle = Math.PI / 6
+		scene.add(spotLight);//光对象添加到scene场景中
+		// 设置用于计算阴影的光源对象
+		spotLight.castShadow = true;
+		// 设置计算阴影的区域，注意包裹对象的周围
+		spotLight.shadow.camera.near = 1;
+		spotLight.shadow.camera.far = 300;
+		spotLight.shadow.camera.fov = 20;
+		var spotLightHelper = new THREE.SpotLightHelper(spotLight);
+		scene.add(spotLightHelper);
 
-    //环境光
-    var ambient = new THREE.AmbientLight(0x440000, 1);
-    scene.add(ambient);
-
-
-    /**
-     * 相机设置
-     */
-    var width = window.innerWidth; //窗口宽度
-    var height = window.innerHeight; //窗口高度
-    var k = width / height; //窗口宽高比
-    var s = 200; //三维场景显示范围控制系数，系数越大，显示的范围越大
-    //创建相机对象
-    var camera = new THREE.OrthographicCamera(-s * k, s * k, s, -s, 1, 1000);
-    camera.position.set(200, 400, 200); //设置相机位置
-    camera.lookAt(scene.position); //设置相机方向(指向的场景对象)
+		//环境光
+		var ambient = new THREE.AmbientLight(0x440000, 1);
+		scene.add(ambient);
 
 
-    /**
-     * 创建渲染器对象
-     */
-    var renderer = new THREE.WebGLRenderer();
-    renderer.setSize(width, height);//设置渲染区域尺寸
-    renderer.setClearColor(0xb9d3ff, 1); //设置背景颜色
-    document.body.appendChild(renderer.domElement); //body元素中插入canvas对象
-    //执行渲染操作   指定场景、相机作为参数
+		/**
+		 * 相机设置
+		 */
+		var width = window.innerWidth; //窗口宽度
+		var height = window.innerHeight; //窗口高度
+		var k = width / height; //窗口宽高比
+		var s = 200; //三维场景显示范围控制系数，系数越大，显示的范围越大
+		//创建相机对象
+		var camera = new THREE.OrthographicCamera(-s * k, s * k, s, -s, 1, 1000);
+		camera.position.set(200, 400, 200); //设置相机位置
+		camera.lookAt(scene.position); //设置相机方向(指向的场景对象)
+
+
+		/**
+		 * 创建渲染器对象
+		 */
+		var renderer = new THREE.WebGLRenderer();
+		renderer.shadowMap.enabled = true
+		renderer.setSize(width, height); //设置渲染区域尺寸
+		renderer.setClearColor(0xb9d3ff, 1); //设置背景颜色
+		document.body.appendChild(renderer.domElement); //body元素中插入canvas对象
+		//执行渲染操作   指定场景、相机作为参数
 
 		function render() {
-			renderer.render(scene,camera);//执行渲染操作
+			renderer.render(scene, camera); //执行渲染操作
 			// mesh.rotateY(0.01);//每次绕y轴旋转0.01弧度
-			requestAnimationFrame(render);//请求再次执行渲染函数render
+			requestAnimationFrame(render); //请求再次执行渲染函数render
 		}
 		render();
-		var controls = new THREE.OrbitControls(camera,renderer.domElement);//创建控件对象
+		var controls = new THREE.OrbitControls(camera, renderer.domElement); //创建控件对象
 		// 已经通过requestAnimationFrame(render);周期性执行render函数，没必要再通过监听鼠标事件执行render函数
 		// controls.addEventListener('change', render)
 	</script>
 </body>
+
 </html>
