--- a/333.html
+++ b/333.html
@@ -17,25 +17,27 @@
 		 */
 		var scene = new THREE.Scene();
 
-		var geometry = new THREE.Geometry(); //声明一个几何体对象Geometry
-		// 三维样条曲线  Catmull-Rom算法
-		var curve = new THREE.CatmullRomCurve3([
-		new THREE.Vector3(-50, 20, 90),
-		new THREE.Vector3(-10, 40, 40),
-		new THREE.Vector3(0, 0, 0),
-		new THREE.Vector3(60, -60, 0),
-		new THREE.Vector3(70, 0, 80)
-		]);
-		//getPoints是基类Curve的方法，返回一个vector3对象作为元素组成的数组
-		var points = curve.getPoints(4); //分段数100，返回101个顶点
-		// setFromPoints方法从points中提取数据改变几何体的顶点属性vertices
-		geometry.setFromPoints(points);
-		//材质对象
+		var p1 = new THREE.Vector3(-85.35, -35.36)
+		var p2 = new THREE.Vector3(-50, 0, 0);
+		var p3 = new THREE.Vector3(0, 50, 0);
+		var p4 = new THREE.Vector3(50, 0, 0);
+		var p5 = new THREE.Vector3(85.35, -35.36);
+		// 创建线条一：直线
+		let line1 = new THREE.LineCurve3(p1,p2);
+		// 重建线条2：三维样条曲线
+		var curve = new THREE.CatmullRomCurve3([p2, p3, p4]);
+		// 创建线条3：直线
+		let line2 = new THREE.LineCurve3(p4,p5);
+		var CurvePath = new THREE.CurvePath();// 创建CurvePath对象
+		CurvePath.curves.push(line1, curve, line2);// 插入多段线条
+		//通过多段曲线路径创建生成管道
+		//通过多段曲线路径创建生成管道，CCurvePath：管道路径
+		var geometry2 = new THREE.TubeGeometry(CurvePath, 100, 5, 25, false);
 		var material = new THREE.LineBasicMaterial({
-		color: 0x000000
+			color: 0xff0000,
 		});
 		//线条模型对象
-		var line = new THREE.Line(geometry, material);
+		var line = new THREE.Line(geometry2, material);
 		scene.add(line); //线条对象添加到场景中
 
 		/**
