--- a/333.html
+++ b/333.html
@@ -17,28 +17,26 @@
 		 */
 		var scene = new THREE.Scene();
 
-		var p1 = new THREE.Vector3(-85.35, -35.36)
-		var p2 = new THREE.Vector3(-50, 0, 0);
-		var p3 = new THREE.Vector3(0, 50, 0);
-		var p4 = new THREE.Vector3(50, 0, 0);
-		var p5 = new THREE.Vector3(85.35, -35.36);
-		// 创建线条一：直线
-		let line1 = new THREE.LineCurve3(p1,p2);
-		// 重建线条2：三维样条曲线
-		var curve = new THREE.CatmullRomCurve3([p2, p3, p4]);
-		// 创建线条3：直线
-		let line2 = new THREE.LineCurve3(p4,p5);
-		var CurvePath = new THREE.CurvePath();// 创建CurvePath对象
-		CurvePath.curves.push(line1, curve, line2);// 插入多段线条
-		//通过多段曲线路径创建生成管道
-		//通过多段曲线路径创建生成管道，CCurvePath：管道路径
-		var geometry2 = new THREE.TubeGeometry(CurvePath, 100, 5, 25, false);
-		var material = new THREE.LineBasicMaterial({
-			color: 0xff0000,
-		});
-		//线条模型对象
-		var line = new THREE.Line(geometry2, material);
-		scene.add(line); //线条对象添加到场景中
+
+		var shape = new THREE.Shape();//创建Shape对象
+		/**
+		 * 创建旋转网格模型
+		 */
+		var points = [
+			new THREE.Vector2(50,60),
+			new THREE.Vector2(25,0),
+			new THREE.Vector2(50,-60)
+		];
+		shape.splineThru(points);//顶点带入样条插值计算函数
+		var splinePoints = shape.getPoints(20);//插值计算细分数20
+		var geometry = new THREE.LatheGeometry(splinePoints,20, 0, 2 * Math.PI);
+		var material=new THREE.MeshPhongMaterial({
+			color:0x0000ff,//三角面颜色
+			// side:THREE.DoubleSide//两面可见
+		});//材质对象
+		material.wireframe = true;//线条模式渲染(查看细分数)
+		var mesh=new THREE.Mesh(geometry,material);//旋转网格模型对象
+		scene.add(mesh);//旋转网格模型添加到场景中
 
 		/**
 		 * 相机设置
