--- a/333.html
+++ b/333.html
@@ -18,18 +18,68 @@
 		var scene = new THREE.Scene();
 
 
-		var shape = new THREE.Shape();//创建Shape对象
-		/**
-		 * 创建旋转网格模型
-		 */
 		var points = [
-			new THREE.Vector2(50,60),
-			new THREE.Vector2(25,0),
-			new THREE.Vector2(50,-60)
-		];
-		shape.splineThru(points);//顶点带入样条插值计算函数
-		var splinePoints = shape.getPoints(20);//插值计算细分数20
-		var geometry = new THREE.LatheGeometry(splinePoints,20, 0, 2 * Math.PI);
+			new THREE.Vector2(-50, -50),
+			new THREE.Vector2(-60, 0),
+			new THREE.Vector2(0, 50),
+			new THREE.Vector2(60, 0),
+			new THREE.Vector2(50, -50),
+			new THREE.Vector2(-50, -50),
+		]
+		// 通过顶点定义轮廓
+		// var shape = new THREE.Shape(points);
+		// // shape可以理解为一个需要填充轮廓
+		// // 所谓填充：ShapeGeometry算法利用顶点计算出三角面face3数据填充轮廓
+		// var geometry = new THREE.ShapeGeometry(shape, 25);
+
+		// 通过shpae基类path的方法绘制轮廓（本质也是生成顶点）
+		// var shape = new THREE.Shape();
+		// shape.absarc(0,0,100,0,2*Math.PI);//圆弧轮廓
+		// console.log(shape.getPoints(15));//查看shape顶点数据
+		// var geometry = new THREE.ShapeGeometry(shape, 25);
+
+		// 通过shpae基类path的方法绘制轮廓（本质也是生成顶点）
+		// var shape = new THREE.Shape();
+		// // 四条直线绘制一个矩形轮廓
+		// shape.moveTo(0,0);//起点
+		// shape.lineTo(0,100);//第2点
+		// shape.lineTo(100,100);//第3点
+		// shape.lineTo(100,0);//第4点
+		// shape.lineTo(0,0);//第5点
+		// var geometry = new THREE.ShapeGeometry(shape, 25);
+
+		// 圆弧与直线连接
+		// var shape = new THREE.Shape(); //Shape对象
+		// var R = 50;
+		// // 绘制一个半径为R、圆心坐标(0, 0)的半圆弧
+		// shape.absarc(0, 0, R, 0, Math.PI);
+		// //从圆弧的一个端点(-R, 0)到(-R, -200)绘制一条直线
+		// shape.lineTo(-R, -200);
+		// // 绘制一个半径为R、圆心坐标(0, -200)的半圆弧
+		// shape.absarc(0, -200, R, Math.PI, 2 * Math.PI);
+		// //从圆弧的一个端点(R, -200)到(-R, -200)绘制一条直线
+		// shape.lineTo(R, 0);
+
+		// 一个外轮廓圆弧嵌套三个内圆弧轮廓
+		var shape = new THREE.Shape(); //Shape对象
+		//外轮廓
+		shape.arc(0, 0, 100, 0, 2 * Math.PI);
+		// 内轮廓1
+		var path1 = new THREE.Path();
+		path1.arc(0, 0, 40, 0, 2 * Math.PI);
+		// 内轮廓2
+		var path2 = new THREE.Path();
+		path2.arc(80, 0, 10, 0, 2 * Math.PI);
+		// 内轮廓3
+		var path3 = new THREE.Path();
+		path3.arc(-80, 0, 10, 0, 2 * Math.PI);
+		//三个内轮廓分别插入到holes属性中
+		shape.holes.push(path1, path2, path3);
+
+
+		var geometry = new THREE.ShapeGeometry(shape, 30);
+
+
 		var material=new THREE.MeshPhongMaterial({
 			color:0x0000ff,//三角面颜色
 			// side:THREE.DoubleSide//两面可见
