--- a/333.html
+++ b/333.html
@@ -18,45 +18,34 @@
 		var scene = new THREE.Scene();
 
 
-		// 纹理贴图映射到一个矩形平面上
-		// var geometry = new THREE.PlaneGeometry(270, 150); //矩形平面
-		// var geometry = new THREE.BoxGeometry(100, 100, 100); //立方体
-		var geometry = new THREE.SphereGeometry(64, 25, 25); //球体
-		// TextureLoader创建一个纹理加载器对象，可以加载图片作为几何体纹理
-		// var textureLoader = new THREE.TextureLoader().load('http://10.23.9.47:57929/11.jpg', function(texture) {
-		// 	//纹理贴图加载成功后，调用渲染函数执行渲染操作
-		// 	// render();
-		// 	// 执行load方法，加载纹理贴图成功后，返回一个纹理对象Texture
-		// 	var material = new THREE.MeshLambertMaterial({
-		// 		// color: 0x0000ff,
-		// 		// 设置颜色纹理贴图：Texture对象作为材质map属性的属性值
-		// 		map: textureLoader,//设置颜色贴图属性值
-		// 	}); //材质对象Material
-		// 	var mesh = new THREE.Mesh(geometry, material); //网格模型对象Mesh
-		// 	scene.add(mesh); //网格模型添加到场景中
-		// });
+		var geometry = new THREE.PlaneGeometry(204, 102, 4, 4);
+		var material1 = new THREE.MeshPhongMaterial({
+			color: 0xffff3f,
+			wireframe: true
+		})
+		var material2 = new THREE.MeshPhongMaterial({
+			color: 0x0000ff
+		})
+		var material3 = new THREE.MeshPhongMaterial({
+			color: 0xff00ff
+		})
 
-		// 图片加载器
-		var ImageLoader = new THREE.ImageLoader();
-		// load方法回调函数，按照路径加载图片，返回一个html的元素img对象
-		ImageLoader.load('/11.jpg', function(img) {
-			// image对象作为参数，创建一个纹理对象Texture
-			var texture = new THREE.Texture(img);
-			// 下次使用纹理时触发更新
-			texture.needsUpdate = true;
-			var material = new THREE.MeshPhongMaterial({
-				map: texture, //设置纹理贴图
-			});
-			var mesh = new THREE.Mesh(geometry, material); //网格模型对象Mesh
-			scene.add(mesh); //网格模型添加到场景中
-		});
+		var materialArr = [material1, material2, material3]
+		geometry.faces[4].materialIndex = 1
+		geometry.faces[5].materialIndex = 1
+		geometry.faces[31].materialIndex = 2
+		console.error(geometry.faces)
+		var mesh = new THREE.Mesh(geometry, materialArr)
+
+
+		scene.add(mesh); //网格模型添加到场景中
 		
 		// 需要设置光源不然贴图是黑色
-		var point = new THREE.AmbientLight(0xffffff);
+		var point = new THREE.AmbientLight(0x555555);
 		point.position.set(400, 100, 300)
 		scene.add(point)
 
-		var point = new THREE.PointLight(0xff0000);
+		var point = new THREE.PointLight(0x118888);
 		point.position.set(400, 100, 300)
 		scene.add(point)
 
